Kubernetes/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: app
  labels:
    app: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-pod
  template:
    metadata:
      labels:
        app: rabbitmq-pod
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8
          ports:
            - containerPort: 5672 # RabbitMQ default port
            - containerPort: 15672 # RabbitMQ management UI port
          resources:
            requests:
              memory: "512Mi"
              cpu: "150m"
            limits:
              memory: "1024Mi"
              cpu: "250m"
