Kubernetes/server-deployment-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment-order
  namespace: eatfresh
  labels:
    app: weborder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weborder
  template:
    metadata:
      labels:
        app: weborder
    spec:
      containers:
      - name: weborder
        image: registry.gitlab.au.dk/wao-exercises1/eatfresh/eatfresh.orderprocessing:0.1v
        ports:
        - containerPort: 5126
        resources:
          requests:
            cpu: "150m"
            memory: "64Mi"
          limits:
            cpu: "600m"
            memory: "128Mi"
        volumeMounts:
        - name: config-volume-order
          mountPath: /app/appsettings.json
          subPath: appsettings.json
      volumes:
      - name: config-volume-order
        configMap:
          name: server-config-order
      imagePullSecrets:
      - name: my-registry-credentials
