Kubernetes/sql-deployment-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment-order
  namespace: eatfresh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver-order
  template:
    metadata:
      labels:
        app: sqlserver-order
    spec:
      containers:
      - name: sqlserver-order
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        resources:
          requests:
            cpu: "150m"
            memory: "64Mi"
          limits:
            cpu: "600m"
            memory: "128Mi"
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: sql-persistent-storage-order
      volumes:
      - name: sql-persistent-storage-order
        persistentVolumeClaim:
          claimName: sql-pvc-order
