Kubernetes/server-service-order.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service-order
  namespace: app
spec:
  selector:
    app: weborder-pod
  ports:
    - name: port1
      protocol: TCP
      port: 80
      targetPort: 5126
  type: ClusterIP
