Kubernetes/sql-service-order.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-service-order
  namespace: eatfresh
spec:
  selector:
    app: sqlserver-order
  ports:
    - protocol: TCP
      port: 1422
      targetPort: 1422
