Kubernetes/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  namespace: eatfresh
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
  - host: swwao.courses.orbit.au.dk
    http:
      paths:
      - pathType: Prefix
        path: "/grp-13//grp-13/order(/|$)(.*)"
        backend:
          service:
            name: server-service
            port:
              number: 80
