Kubernetes/rabbitmq-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-network-policy
  namespace: eatfresh
spec:
  podSelector:
    matchLabels:
      app: rabbitmq-pod
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
          matchLabels:
            app: weborder-pod
    ports:
      - protocol: TCP
        port: 5672
